[]
    Enhancements
	- Improved rpm platform detection and version string
	- Allow specifying a packaging version
    Bugfixes:
	- Fixed compilation failure when docutils is not installed
	- Removed all compiler warnings on Windows
		When compiling a debug version, some warnings remain
		(intentionally).
	- Fixed a compilation failure on Fedora when using postgresql
	- Fixed failure to compile with gcc 6
	- Fixed failure to compile when rpm is not installed
		(e.g. on non-rpm systems...)
	- Workaround to allow compilation with clang when using leveldb.
		This is broken due to libstdc++ ABI incompatibility
	- Fixed compilation failure on FreeBSD (10.3) using gcc
	- Detect when package version will not match current git commit id,
		and refuse to build package with wrong version.
[31 May 2016]
    Features:
	- Support for postgresql backend added
		Compatible with two previous unofficial implementations, by
		ShadowNinja and johnnyjoy. Support for these will be removed
		in a future version of Minetestmapper.
	- Support for MSVC/Windows compilation (Thanks to adrido!)
    Enhancements:
        - Updated the included colors file with colors for the new tiles that
	 	were recently added to the default minetest game.
	- Improved the scripts and documentation for generating a colors.txt
		file.
	- HTML versions of documentation in doc/ is now generated, and included
		in the different packages.
	- Documented concurrent minetest & minetestmapper use.
	- Documented the different geometries reported with --verbose
	- Mentioned adrido's MinetestmapperGUI in the manual
	- The option --prescan-world was added to force or disable scanning the
		entire world (i.e. reading a full blocklist)
		(useful for postgresql, which doesn't do this by default).
	- Command-line options are now all case-agnostic wrt their parameters.
	- Allow nodes to be defined as air-type or ignore-type in colors.txt
	- Added an option to draw 'ignore'-nodes.